implemented get chats, get single chat, add user to chat - so very painful
