# app/config/swagger-spec-v1.0.0.json
@@ -616,8 +616,15 @@
             }
           },
           "responses": {
-            "200": {
-              "description": "OK"
+            "201": {
+              "description": "Created",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/CreateChatResponse"
+                  }
+                }
+              }
             },
             "400": {
               "description": "Bad request"
@@ -752,6 +759,9 @@
           "responses": {
             "200": {
               "description": "OK"
+            },
+            "400": {
+              "description": "Bad Request"
             },
             "401": {
               "description": "Unauthorized"
@@ -1175,15 +1185,16 @@
         "ChatSummary": {
           "type": "object",
           "properties": {
+            "chat_id": {
+              "type": "integer",
+              "example": 14
+            },
             "name": {
               "type": "string",
               "example": "The Rod Stewart Appreciation Society"
             },
             "creator": {
               "$ref": "#/components/schemas/User"
-            },
-            "members": {
-              "$ref": "#/components/schemas/Users"
             },
             "last_message": {
               "$ref": "#/components/schemas/SingleMessage"
@@ -1193,10 +1204,23 @@
         },
         "CreateChat": {
           "type": "object",
+          "required": [
+            "name"
+          ],
           "properties": {
             "name": {
               "type": "string",
               "example": "The Rod Stewart Appreciation Society"
+            }
+          },
+          "additionalProperties": false
+        },
+        "CreateChatResponse": {
+          "type": "object",
+          "properties": {
+            "chat_id": {
+              "type": "integer",
+              "example": 14
             }
           },
           "additionalProperties": false
